<resources>
    <string name="app_name">Particle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configure</string>
    <string name="device_name">Device Name</string>
    <string name="device_description">Device Description</string>
    <string name="device_status">Device Status: </string>
    <string name="variable_name">Variable Name:</string>
    <string name="variable_type">Variable Type:</string>
    <string name="variable_status">Variable Status:</string>
    <string name="enter_val_id_1">Enter Val Id 1</string>
    <string name="create_new_variable">Create new Variable</string>
    <string name="enter_val_id_2">Enter Val Id 2</string>
    <string name="enter_input_constant">Enter Input Constant</string>
    <string name="choose_operator">Choose Operator</string>
    <string name="choose_result">Choose Result</string>
    <string name="enter_result_constant">Enter Result Constant</string>
    <string name="global_variable">Global Variable</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="choose_device">Choose device</string>
    <string name="enter_name">Enter name</string>
    <string name="choose_valid1">Choose Val Id1</string>
    <string name="choose_valid2">Choose Val Id2</string>
    <string name="enter_variable_name">Enter Variable name</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="lcd_particle">LCD Particle</string>
</resources>
