<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="600dp"
            android:layout_gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/createVariableTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:text="@string/create_new_variable"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/variableNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="8"
                android:hint="@string/enter_variable_name"
                android:inputType="text" />

            <TextView
                android:id="@+id/variableChooseDeviceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_device"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/variableDeviceSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/variableChooseValId1Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/choose_valid1"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/variableValId1Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/variableChooseValId2Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/choose_valid2"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/variableValId2Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/variableInputConstantText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="9"
                android:hint="@string/enter_input_constant"
                android:inputType="number" />

            <EditText
                android:id="@+id/variableResultConstantText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="9"
                android:hint="@string/enter_result_constant"
                android:inputType="number" />

            <TextView
                android:id="@+id/variableChooseOperatorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/choose_operator"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/variableOperatorSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/variableChooseResultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_result"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/variableResultSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/global_variable"
                    android:textSize="20sp"
                    android:paddingRight="5dp"/>

                <Switch
                    android:id="@+id/globalVariableSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/variableSendButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/send" />

                <Button
                    android:id="@+id/variableCancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</RelativeLayout>
