<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/deviceDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_description"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/deviceStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_status"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>